--- a/views/layouts/normal.ejs
+++ b/views/layouts/normal.ejs
@@ -6,10 +6,10 @@
     <title>Buroggu</title>
 </head>
 <body>
-    first
+    up
     <br>
     <%- body %> 
     <br>
-    second
+    down
 </body>
 </html>
