--- a/views/layouts/normal.ejs
+++ b/views/layouts/normal.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buroggu</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Up to date</title>
+  </head>
+  <body>
     up
-    <br>
-    <%- body %> 
-    <br>
+    <br />
+    <%- body %>
+    <br />
     down
-</body>
+  </body>
 </html>
